--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "type": "module",
-  "name": "@hazae41/chemin",
-  "version": "2.0.10",
-  "description": "Create infinite virtual subpaths for your React webapp",
-  "homepage": "https://github.com/hazae41/chemin",
-  "repository": "github:hazae41/chemin",
+  "name": "@hazae41/fixed",
+  "version": "0.0.0",
+  "description": "Fixed-point numbers in idiomatic TypeScript",
+  "homepage": "https://github.com/hazae41/fixed",
+  "repository": "github:hazae41/fixed",
   "author": "hazae41",
   "license": "MIT",
   "main": "./dist/cjs/index.cjs",
